# novelai-gateway

./: .dockerignore  .env.example  .gitignore  API_REQUEST_DOC.md  Dockerfile  README.md  docker-compose.yml  main.py  pyproject.toml  start.bat
logs/: stats_summary.json
src/proxy/: app.py  config.py  forwarder.py  openai.py  queue.py  rewriter.py  stats.py
